https://github.com/MathuKirishna/AngularNodejsTrainingProject-.git

--- a/src/app/view-profile/view-profile.component.html
+++ b/src/app/view-profile/view-profile.component.html
@@ -1,6 +1,6 @@
 <div  *ngFor="let user_detail of user_details"class="row">
   <div class="column-md-4">
-    <div style = "width:11cm;height:17cm;margin-left:4cm;margin-top:1.5cm;"class="card">
+    <div style = "width:11cm;height:17cm;margin-left:4cm;margin-top:3cm;"class="card">
   <img src="{{user_detail.profile_picture}}" alt="Avatar" style="width:100%;"><hr>
   <div class="container">
     <h5 style="color:rgb(175, 10, 10)">DISPLAY NAME :- {{user_detail.display_name}}</h5>
@@ -16,7 +16,7 @@
 </div>
 <div class="column-md-4">
 <div class="row">
-<div style = "width:16cm;margin-left:4cm;margin-top:1.5cm;height:7.5cm"class="card">
+<div style = "width:16cm;margin-left:4cm;margin-top:3cm;height:7.5cm"class="card">
 
   
 <div class="container mt-3">
@@ -48,8 +48,61 @@
 </div>
 
 </div>
-<div >
-  calender
+<div style ="margin-left:140px;margin-top:100px;" >
+  <div class="month">      
+  <ul>
+    <li class="prev">&#10094;</li>
+    <li class="next">&#10095;</li>
+    <li>
+  October<br>
+      <span style="font-size:18px">2018</span>
+    </li>
+  </ul>
+</div>
+
+<ul class="weekdays">
+  <li>Mo</li>
+  <li>Tu</li>
+  <li>We</li>
+  <li>Th</li>
+  <li>Fr</li>
+  <li>Sa</li>
+  <li>Su</li>
+</ul>
+
+<ul class="days">  
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+  <li>5</li>
+  <li>6</li>
+  <li>7</li>
+  <li>8</li>
+  <li><span class="active">9</span></li>
+  <li>10</li>
+  <li>11</li>
+  <li>12</li>
+  <li>13</li>
+  <li>14</li>
+  <li>15</li>
+  <li>16</li>
+  <li>17</li>
+  <li>18</li>
+  <li>19</li>
+  <li>20</li>
+  <li>21</li>
+  <li>22</li>
+  <li>23</li>
+  <li>24</li>
+  <li>25</li>
+  <li>26</li>
+  <li>27</li>
+  <li>28</li>
+  <li>29</li>
+  <li>30</li>
+  <li>31</li>
+</ul>
 </div>
 
 
