New Changes added

--- a/src/app/shortlist/shortlist.component.html
+++ b/src/app/shortlist/shortlist.component.html
@@ -1,3 +1,57 @@
-<p>
-  shortlist works!
-</p>
+<h3 style="color:rgb(216, 16, 16);text-align: center;margin-top:60px;">
+  ShortList
+</h3>
+
+<div style="margin-left:370px;" class="column-md-2">
+    <div style="margin-top:90px;"class="row">
+              <div  class="column-md-2">
+                  <div class="card" style="background-color:#e2dddd;width:32cm;height:7cm;" >
+                      
+                
+                    <div style="width:32cm;height:7cm;" class="card-body">
+                        <div class="row">
+                          <div class="col s12 m6">
+                            <div stle="height:32cm;" class="card blue-grey darken-1">
+                              <div class="card-content white-text">
+                                  
+                                 
+                                <span class="card-title"><h5 style="margin-left:20px;margin-top:2px;">JOB TITLE</h5></span> <hr>
+                                <div class="row">
+                                    
+                                <div style="margin-left:40px;" class="column">
+                               
+                                <h6 id="employeeName">NAME </h6>
+                                <h6>CITY</h6>
+                              </div>
+                              <div style="margin-left:140px;"class="column">
+                                <h6>EXPERIENCE</h6>
+                                <h6>EDUCATIONAL QUALIFICATION </h6>
+                              </div>
+                              <div style="margin-left:140px;" class="column">
+                                <h6>EMPLOYEE RATE </h6>
+                                <h6>EMPLOYEE RATING </h6>
+                              </div>
+                            </div>
+                             
+                              <hr>
+                                <h6 style="margin-left:30px;">DESCRIPTION </h6>
+    
+                              
+                          </div>
+                        </div>
+                 </div>
+                </div>
+                <div class="row">
+                 <div style="margin-top:20px;margin-left:1030px;" class="card-action">
+                    <button style="height:1cm;width:4cm;background-color: rgb(170, 15, 15);color:white;"><b  >VIEW PROFILE</b></button>
+                    <div class="row">
+                   </div>
+                </div>
+              </div>
+          
+          
+     </div>
+    </div> 
+    </div>
+    </div>
+    </div>
