--- a/src/app/advancedsearchbar/advancedsearchbar.component.html
+++ b/src/app/advancedsearchbar/advancedsearchbar.component.html
@@ -83,7 +83,7 @@
                         <div stle="height:32cm;" class="card blue-grey darken-1">
                           <div class="card-content white-text">
                               
-                              <button class="w3-button w3-xlarge w3-circle w3-red w3-card-4" style="height:1.2cm;width:4cm;margin-top:5px;margin-left:1000px;color: rgb(170, 15, 15);" ><h6>+ Add to Short List</h6></button>
+                              <button  style="height:1.2cm;width:4cm;margin-top:5px;margin-left:1000px;color: rgb(170, 15, 15);" ><h6>+ Add to Short List</h6></button>
                             <span class="card-title"><h5 style="margin-left:20px;margin-top:2px;">JOB TITLE :- {{employee.jobtitle}} </h5></span> <hr>
                             <div class="row">
                                 
