--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,7 +2,7 @@
  
 <div class="image">
 
-        <img style = "-webkit-filter: opacity(.6);filter: opacity(.6);"src="./assets/3.jpg" alt="" />
+        <img style = "-webkit-filter: opacity(.6);filter: opacity(.6);margin-top:60px; "src="./assets/3.jpg" alt="" />
         
         <h2>"Great hair doesn't happen by chance it happens by Appointment."</h2>
         <button (click)="onClick()" class="btn">Find Hair Stylists</button>
