--- a/src/app/view-profile/view-profile.component.html
+++ b/src/app/view-profile/view-profile.component.html
@@ -12,7 +12,7 @@
     <h6 style="color: rgb(12, 118, 240)">Email Address :- {{user_detail.email}}</h6>
     
 </div>
-</div>
+</div><hr>
 </div>
 <div class="column-md-4">
 <div class="row">
