--- a/src/app/view-profile/view-profile.component.css
+++ b/src/app/view-profile/view-profile.component.css
@@ -169,3 +169,12 @@ body {font-family: Verdana, sans-serif;}
 @media screen and (max-width: 290px) {
     .weekdays li, .days li {width: 12.2%;}
 }
+
+
+.vl{
+
+  border-left: thick solid #5e5b5b;
+  margin-left:100px;
+  margin-bottom: 1px;
+  height:1200px;
+}
